Fixed: Overflow on announcement summary
Fixed: Overflow on login homepage and OAMS Settings
Fixed: Update button on announcement_table
Fixed: View Details button on login homepage lands on announcement ID

--- a/application/assets/css/my_code.css
+++ b/application/assets/css/my_code.css
@@ -443,11 +443,20 @@ tr.shown td.details-control {
 .padded td {
   padding-left: 5px;
 }
+#announcement_table td.content,
+#announcement_summary_table td.content,
 #message_table td.message {
+  text-overflow: ellipsis;
   max-width: 200px;
   white-space: nowrap;
   overflow: hidden;
+  color: inherit;
 }
+#headlines {
+  height: 100px;
+  overflow: hidden;
+}
+
 a.link-reverse
 {
   color: inherit;
